--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Myles Derham",
+            "name": "Sylvio Neto",
             "homepage": "https://github.com/dmsylvio"
         }
     ],
